@@ -13,24 +13,23 @@ Authors@R: c(
     person("Peter M.", "Larsen", role = c("ctb"))
     )
 Description: A retake on the Genie algorithm
-    (Gagolewski, 2021 <DOI:10.1016/j.softx.2021.100722>) - a robust
+    (Gagolewski, 2021 <DOI:10.1016/j.softx.2021.100722>), which is a robust
     hierarchical clustering method
     (Gagolewski, Bartoszuk, Cena, 2016 <DOI:10.1016/j.ins.2016.05.003>).
-    Now faster and more memory efficient; determining the whole hierarchy
-    for datasets of 10M points in low dimensional Euclidean spaces or
-    100K points in high-dimensional ones takes only 1-2 minutes.
+    It is now faster and more memory efficient; determining the whole cluster
+    hierarchy for datasets of 10M points in low dimensional Euclidean spaces or
+    100K points in high-dimensional ones takes only a minute or so.
     Allows clustering with respect to mutual reachability distances
     so that it can act as a noise point detector or a robustified version of
     'HDBSCAN*' (that is able to detect a predefined number of
     clusters and hence it does not dependent on the somewhat
-    fragile 'eps' parameter).
-    The package also features an implementation of inequality indices
-    (the Gini, Bonferroni index), external cluster validity measures
-    (e.g., the normalised clustering accuracy and partition similarity scores
-    such as the adjusted Rand, Fowlkes-Mallows, adjusted mutual information,
-    and the pair sets index),
-    and internal cluster validity indices (e.g., the Calinski-Harabasz,
-    Davies-Bouldin, Ball-Hall, Silhouette, and generalised Dunn indices).
+    fragile 'eps' parameter). The package also features an implementation
+    of inequality indices (e.g., Gini and Bonferroni),
+    external cluster validity measures (e.g., the normalised clustering accuracy,
+    the adjusted Rand index, the Fowlkes-Mallows index, and
+    normalised mutual information), and internal cluster validity indices
+    (e.g., the Calinski-Harabasz, Davies-Bouldin, Ball-Hall, Silhouette,
+    and generalised Dunn indices).
     See also the 'Python' version of 'genieclust' available on 'PyPI', which
     supports sparse data, more metrics, and even larger datasets.
 BugReports: https://github.com/gagolews/genieclust/issues
@@ -45,8 +44,7 @@ Imports:
     utils
 Suggests:
     datasets,
-    mlpack
-LinkingTo: Rcpp
+LinkingTo: Rcpp, RcppArmadillo, RcppEnsmallen, mlpack
 Encoding: UTF-8
 SystemRequirements: OpenMP
 RoxygenNote: 7.3.2
