@@ -23,7 +23,7 @@
 .correct_height <- function(height)
 {
     # correction for the departure from ultrametricity
-    # TODO: allow one choose?
+    # TODO: allow one to choose?
     # cumsum(height)
     rev(cummin(rev(height)))
 }
@@ -172,7 +172,7 @@
 #' pair_sets_index(y_test, y_pred)
 #'
 #' # Fast for low-dimensional Euclidean spaces:
-#' # h <- gclust(emst_mlpack(X))
+#' h <- gclust(emst_mlpack(X))
 #'
 #' @rdname gclust
 #' @export
