@@ -183,7 +183,7 @@ adjusted_rand_score(y_test, y_pred)
 pair_sets_index(y_test, y_pred)
 
 # Fast for low-dimensional Euclidean spaces:
-# h <- gclust(emst_mlpack(X))
+h <- gclust(emst_mlpack(X))
 
 }
 \references{
