@@ -1,6 +1,8 @@
 // Generated by using Rcpp::compileAttributes() -> do not edit by hand
 // Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
+#include <RcppArmadillo.h>
+#include <RcppEnsmallen.h>
 #include <Rcpp.h>
 
 using namespace Rcpp;
@@ -273,6 +275,19 @@ BEGIN_RCPP
     return rcpp_result_gen;
 END_RCPP
 }
+// dot_emst_mlpack
+Rcpp::NumericMatrix dot_emst_mlpack(Rcpp::NumericMatrix X, int leaf_size, bool verbose);
+RcppExport SEXP _genieclust_dot_emst_mlpack(SEXP XSEXP, SEXP leaf_sizeSEXP, SEXP verboseSEXP) {
+BEGIN_RCPP
+    Rcpp::RObject rcpp_result_gen;
+    Rcpp::RNGScope rcpp_rngScope_gen;
+    Rcpp::traits::input_parameter< Rcpp::NumericMatrix >::type X(XSEXP);
+    Rcpp::traits::input_parameter< int >::type leaf_size(leaf_sizeSEXP);
+    Rcpp::traits::input_parameter< bool >::type verbose(verboseSEXP);
+    rcpp_result_gen = Rcpp::wrap(dot_emst_mlpack(X, leaf_size, verbose));
+    return rcpp_result_gen;
+END_RCPP
+}
 // dot_mst_default
 NumericMatrix dot_mst_default(NumericMatrix X, String distance, int M, bool cast_float32, bool verbose);
 RcppExport SEXP _genieclust_dot_mst_default(SEXP XSEXP, SEXP distanceSEXP, SEXP MSEXP, SEXP cast_float32SEXP, SEXP verboseSEXP) {
@@ -386,6 +401,7 @@ static const R_CallMethodDef CallEntries[] = {
     {"_genieclust_silhouette_index", (DL_FUNC) &_genieclust_silhouette_index, 2},
     {"_genieclust_silhouette_w_index", (DL_FUNC) &_genieclust_silhouette_w_index, 2},
     {"_genieclust_wcnn_index", (DL_FUNC) &_genieclust_wcnn_index, 3},
+    {"_genieclust_dot_emst_mlpack", (DL_FUNC) &_genieclust_dot_emst_mlpack, 3},
     {"_genieclust_dot_mst_default", (DL_FUNC) &_genieclust_dot_mst_default, 5},
     {"_genieclust_dot_mst_dist", (DL_FUNC) &_genieclust_dot_mst_dist, 3},
     {"_genieclust_dot_genie", (DL_FUNC) &_genieclust_dot_genie, 6},
