@@ -7,7 +7,8 @@
     Euclidean MSTs has been added and now it is applied automatically
     where applicable.
 
-* [R] Refactored `mst`.
+* [R] The `mlpack` package is now required.
+    The `mst` family of methods has been refactored.
 
 
 ## 1.1.6 (2024-08-22)
